# TemplatePipicoSDK

Temp/lib/objNeopixel/: NeoPixelLed.h
Temp/lib/objNeopixel/colores/: ColorPalette.h
Temp/prgProject/: CMakeLists.txt  main.cpp  pico_sdk_import.cmake
Temp/src/srcNeopixel/: NeoPixelLed.cpp  ws2812.pio
Temp/src/srcNeopixel/colores/: ColorPalette.cpp
lib/objNeopixel/: NeoPixelLed.h
prgProject/: main.cpp  pico_sdk_import.cmake
src/srcNeopixel/: NeoPixelLed.cpp  ws2812.pio
src/srcNeopixel/colores/: ColorPalette.cpp
